[gd_scene load_steps=7 format=3 uid="uid://player001"]

[ext_resource type="Script" uid="uid://m8uaib5i1400" path="res://scripts/player/PlayerController.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c2bsusyu7hynn" path="res://sprites/frog_idle.png" id="2_ok4up"]
[ext_resource type="AudioStream" uid="uid://ugc37sqlqeua" path="res://audio/sfx/Player Grapple SFX.wav" id="4_2ad00"]
[ext_resource type="Script" uid="uid://dcnmqncac3fq2" path="res://scripts/player/HealthSystem.gd" id="4_dnu5j"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ok4up"]

[sub_resource type="CircleShape2D" id="2"]
radius = 80.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1")

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_ok4up")

[node name="BodyCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ok4up")

[node name="GrappleSensor" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrappleSensor"]
shape = SubResource("2")

[node name="GrappleLine" type="Line2D" parent="."]
width = 2.0
default_color = Color(0.8, 0.6, 0.4, 1)

[node name="GrapplePoint" type="Node2D" parent="."]

[node name="HealthSystemComponent" type="Node" parent="."]
script = ExtResource("4_dnu5j")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_2ad00")
